# Logger

./: README.md
Logger_/: CMakeLists.txt
Logger_/include/: ErrorExecutive.hpp  ErrorHandler.hpp  ExceptionHandler.hpp  FileHandler.hpp  Logger.hpp  TimeHandler.hpp  WarningHandler.hpp  enums.hpp
Logger_/include/executive/: ErrorExecutive.hpp  WarningExecutive.hpp
Logger_/include/handler/: DebugHandler.hpp  ErrorHandler.hpp  ExceptionHandler.hpp  WarningHandler.hpp
Logger_/logFiles/: logger.txt
Logger_/src/: ErrorExecutive.cpp  ErrorHandler.cpp  ExceptionHandler.cpp  FileHandler.cpp  TimeHandler.cpp  WarningExecutive.cpp  WarningHandler.cpp  main.cpp
Logger_/src/executive/: ErrorExecutive.cpp  WarningExecutive.cpp
Logger_/src/handler/: DebugHandler.cpp  ErrorHandler.cpp  ExceptionHandler.cpp  WarningHandler.cpp
